02 Aug 2005 mipsator
 * added da_sort() to sort the content of the dynary.
 * first import of code building functions for further use in pmk.
 * fixed bugs in pathtools.

21 Jul 2005 mipsator
 * added ISO C99 vsnprintf() implementation (missing wide char support).
 * rewritten a bit compat.

07 Jul 2005 mipsator
 * added type data support in pmkscan.

05 Jul 2005 mipsator
 * finished support for man pages and data files in pmkscan's makefile
   generation.
 * fixed recursive scanning of directory in pmkscan.

# snapshot 0.9.3-s1

01 Jul 2005 mipsator
 * fixed scan_dir() by replacing use of non portable member of structure
   dirent by the use of stat(). This should fix problems encountered on
   Solaris 8.
 * fixed our strlcpy().
 * fixed CPP and CC values in pmkcfg.sh script.

30 Jun 2005 mreindl
 * include config.h in compat/pmk_sys_types.h.

30 Jun 2005 mipsator
 * added support for a configuration script in pmkscan.
 * added an example of configuration script.

13 Jun 2005 mipsator
 * add da_find() to search a string through a dynary.

20 May 2005 mipsator
 * fixed a bug in chkpath() when the parser come to the beginning of
   the string and that it does not start with a separator.

14 May 2005 mipsator
 * added hash_keys_sorted() which returns a sorted list of keys.
 * update of style for function header comments. 
 * added parse_asm_file() to parse assembly files.
 * improvements to pmkscan.
 * misc change in compat module.

07 May 2005 mipsator
 * imported new compatibility layer.
 * polished pmkscan output.

04 May 2005 mipsator
 * improved target's object dependencies scanning in pmkscan.
 * removed useless pmkshgen* files as the idea will be implemented in
   pmkinstall.

25 Apr 2005 mipsator
 * fixed a bug that prevent --list-all option to work in pmkpc.
 * added missing variable substitution for library path in pmkpc.

21 Apr 2005 mipsator
 * modified pmkscan to use parse_lang.
 * improved the -m option of pmkscan.
 * fixed/improved stuff in prseng.