@@ -2,6 +2,7 @@
  * added da_sort() to sort the content of the dynary.
  * first import of code building functions for further use in pmk.
  * fixed bugs in pathtools.
+ * synced pmkcfg.sh and pmkfile with compat.
 
 21 Jul 2005 mipsator
  * added ISO C99 vsnprintf() implementation (missing wide char support).
